--- a/task/Age calculator/style.css
+++ b/task/Age calculator/style.css
@@ -62,3 +62,10 @@ input{
     border: none;
     font-size: 25px;
 }
+h2{
+    margin-top: 15px;
+    font-size: 30px;
+    color: #607274;
+    text-align: center;
+
+}
